# devcontainer-base

./: .dockerignore  .gitignore  AGENT.md  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  build.py  docker-bake.hcl  docker-daemon.json  docker-init.sh  install.sh  justfile  mise.apt.toml  mise.brew.toml  mise.toml  pyproject.toml  trivy.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/: actionlint.yaml
.github/workflows/: build.yml  codeql.yml  release.yml  test-devcontainer.yml
devcontainer-base/: mise.toml
devcontainer-base/.devcontainer/: Dockerfile  devcontainer.json  onCreateCommand.sh
scripts/: docker-init.sh
src/wagov_devcontainer/: __init__.py  __main__.py  cli.py  deploy.py  spec.py
